# ai-architect

./: .env  .gitignore  README.md  main.py  requirements.txt  setup.py  test_import.py
agent_graph/: main.py  run.py  setup.py
agent_graph/agents/: analyzer_agent.py  base_agent.py  moderator_agent.py
agent_graph/config/: prompts.py
agent_muti/: README.md  config.yaml  main.py  setup.py
agent_muti_discussion/: README.md  main.py  requirements.txt  run.py  setup.py
agentdemo/: PROJECT_SUMMARY.md  README.md  __init__.py  config.yaml  demo.py  main.py  requirements.txt  test_basic.py
agentmcp/: agentmcp.py
apifox/: OpenAI.apifox.json
client/client/: utils.py  (+5 more)
csv-search/: csv_search.py  llm.py  requirements.txt
docs/: business.md  research.md  summary.md  tech.md  主持人.md  需求分析.md
graph_discussion/: README.md  __init__.py  config.py  graph.py  main.py  requirements.txt  setup.py  state.py
lib_graph/: publish.sh  pyproject.toml  setup.py
lib_hello/: README.md  pyproject.toml  setup.py
lib_hello/src/lib_hello/: __init__.py  core.py  utils.py
lib_request/: pyproject.toml  setup.py
manus/: main.py  run_flow.py  setup.py
mcp_client_manager/: main.py  setup.py
mcp_manager/: main.py  setup.py
mcp_server_math/: README.md  main.py  pyproject.toml  setup.py
mcp_weather/: main.py  setup.py
rag_llamaindex/: app.py  download_hf.py  download_internlm1.8_chat.py  llamaindex_RAG.py  llamaindex_internlm.py
serve/: README.md  pyproject.toml
server/: README.md  pyproject.toml  setup.py
webui-chatbot/: .gitignore  README.md  requirements.txt  setup.py
(+186 files in other folders)
